kubernetes-manifests/mytrack-srv.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytrack-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mytrack-srv
  template:
    metadata:
      labels:
        app: mytrack-srv
    spec:
      containers:
      - name: server
        image: fondorg/mytrack-srv
        ports:
        - containerPort: 9090
