kubernetes-manifests/mytrack-srv.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mytrack-srv
spec:
  type: LoadBalancer
  selector:
    app: mytrack-srv
  ports:
  - name: http
    port: 9090
    targetPort: 9090
